--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,9 +10,4 @@ if (NOT EXISTS "${CMAKE_BINARY_DIR}/conan.cmake")
             "${CMAKE_BINARY_DIR}/conan.cmake")
 endif ()
 
-include(${CMAKE_BINARY_DIR}/conan.cmake)
-conan_add_remote(NAME bincrafters INDEX 1 URL https://api.bintray.com/conan/bincrafters/public-conan)
-
-conan_cmake_run(CONANFILE conanfile.py BASIC_SETUP CMAKE_TARGETS BUILD missing)
-
-add_executable(pacman main.cpp)
+add_subdirectory(src)
