--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,9 +3,10 @@ conan_add_remote(NAME bincrafters INDEX 1 URL https://api.bintray.com/conan/binc
 
 conan_cmake_run(CONANFILE ../conanfile.py BASIC_SETUP CMAKE_TARGETS BUILD missing)
 
-find_package(SDL2 REQUIRED)
-include_directories(${SDL2_INCLUDE_DIRS})
+find_package(sdl2 REQUIRED)
+find_package(sdl2_image REQUIRED)
+include_directories(${sdl2_INCLUDE_DIRS} ${sdl2_image_INCLUDE_DIRS})
 
 file(GLOB_RECURSE sources CONFIGURE_DEPENDS "*.cpp")
 add_executable(${PROJECT_NAME} ${sources})
-target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} ${sdl2_LIBRARIES} ${sdl2_image_LIBRARIES})
